Fixed bug where jumping to publications wouldn't always work.

--- a/app/styles/homepage.styl
+++ b/app/styles/homepage.styl
@@ -136,6 +136,7 @@ h1
 	left -45px
 
 	width 750px
+	height @width * 1.1229
 	
 
 footer 
